--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "02-api-rest-nodejs",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "migrate": "knex --knexfile knexfile.ts migrate:latest --env development",
@@ -20,6 +23,7 @@
     "@types/node": "^24.3.0",
     "@types/supertest": "^2.0.12",
     "eslint": "^8.33.0",
+    "pg": "^8.9.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
     "tsup": "^6.5.0",
